<resources>
    <string name="app_name">Mobile App Project</string>
    <string name="imgLogo">Logo Image</string>
    <string name="hintUsername">Enter Username</string>
    <string name="hintPassword">Enter Password</string>
    <string name="btnLogIn">Log In</string>
    <string name="btnCreateAccount">Create Account</string>
    <string name="radbtnCustomer">Customer</string>
    <string name="radbtnRestaurant">Restaurant</string>
    <string name="hintName">Enter Name</string>
    <string name="hintCity">Enter City</string>
    <string name="hintPhoneNumber">Enter Phone Number</string>
    <string name="hintEmail">Enter Email</string>
    <string name="hintConfirmPassword">Confirm Password</string>
    <string name="txtName">Name:</string>
    <string name="txtCity">City:</string>
    <string name="txtPhoneNumber">Phone:</string>
    <string name="txtEmail">Email:</string>
    <string name="txtUsername">Username:</string>
    <string name="txtPassword">Password:</string>
    <string name="txtRestaurantDescription">Restaurant Description</string>
    <string name="hintRestaurantDescription">Enter Description Here</string>
    <string name="btnLogOut">Log Out</string>
    <string name="btnAccountManagement">Account Management</string>
    <string name="btnOrderHistory">Order History</string>
    <string name="btnNewOrder">New Order</string>
    <string name="txtAccountManagement">Account Management</string>
    <string name="hintCustomerAccountManagementCity">New City</string>
    <string name="hintCustomerAccountManagementPhone">New Phone Number</string>
    <string name="hintCustomerAccountManagementUsername">New Username</string>
    <string name="hintCustomerAccountManagementEmail">New Email</string>
    <string name="hintCustomerAccountManagementOldPassword">Old Password</string>
    <string name="hintCustomerAccountManagementNewPassword">New Password</string>
    <string name="hintCustomerAccountManagementConfirmNewPassword">Confirm New Password</string>
    <string name="btnUpdate">Update</string>
    <string name="hintDeleteAccount">Enter Password to Delete Account</string>
    <string name="btnDeleteAccount">Delete Account</string>
</resources>