<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerMain">

    <Button
        android:id="@+id/btnCustomerLogOut"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/btnLogOut"
        app:layout_constraintEnd_toEndOf="@+id/btnCustomerOrderHistory"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnCustomerAccountManagement" />

    <Button
        android:id="@+id/btnCustomerAccountManagement"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/btnAccountManagement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@+id/btnCustomerOrderHistory"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCustomerOrderHistory"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btnOrderHistory"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCustomerNewOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/btnNewOrder"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCustomerOrderHistory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgCustomerMainLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/imgLogo"
        app:layout_constraintBottom_toTopOf="@+id/btnCustomerNewOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCustomerAccountManagement"
        app:srcCompat="@drawable/kitchen_extras_below"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>